Attempting to fix multiple scrollbars issue

--- a/css/components/viewport.css
+++ b/css/components/viewport.css
@@ -58,3 +58,9 @@
         background: black;
     }
 }
+
+/* Prevent multiple scrollbars from appearing */
+html,
+body {
+  overflow: hidden;
+}
